# streamlit-sales

./: README.md  dashboard.py  generate.py  key_account.csv  key_account_fake_store_locations.csv  pyproject.toml  sales_data.csv
