[tool.poetry]
name = "streamlit-sales"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "streamlit_sales"}]

[tool.poetry.dependencies]
python = "3.9"
streamlit = "^1.22.0"
plotly = "^5.14.1"
wordcloud = "^1.9.2"
folium = "^0.14.0"
openai = "^0.27.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
